@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.universal"
        name="Universal Movie Scraper"
-       version="2.7.0"
+       version="2.7.1"
        provider-name="Olympia, XBMC Foundation">
   <requires>
     <import addon="xbmc.metadata" version="2.1.0"/>
